# advent-of-code

./: .gitignore  project.yaml
common/kotlin/: build.gradle.kts  module.yaml  settings.gradle.kts
year2018/rust/: Cargo.toml
year2018/rust/src/: main.rs
year2019/: settings.gradle.kts
year2019/kotlin/: build.gradle.kts
year2019/kotlin/src/: day01.kt  day09.kt  resources.kt
year2019/src/: day02.kt  day03.kt  day05.kt  day17.kt  day25.kt
year2019/src/intcode/: Instruction.kt  (+1 more)
year2020/: settings.gradle.kts
year2021/: Cargo.toml
year2021/day01/: Cargo.toml
year2021/day02/: Cargo.toml
year2021/rust/: Cargo.toml
year2021/src/: grid.rs  lib.rs  packet.rs  scanner.rs  snailfish.rs
year2022/rust/: Cargo.toml
year2022/rust/src/: grid.rs  main.rs  search.rs
year2022/rust/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
year2023/: build.gradle.kts  settings.gradle.kts
year2023/src/: Grid.kt  day01.kt  day02.kt  day03.kt  day04.kt  day05.kt  day06.kt  day07.kt  day08.kt  day09.kt  day10.kt  day11.kt  day12.kt  day13.kt  day14.kt  day15.kt  math.kt  utils.kt
year2024/: build.gradle.kts  module.yaml  settings.gradle.kts
year2025/: module.yaml
year2025/rust/: .gitignore  Cargo.toml
year2025/src/: day00.kt  day01.kt  day02.kt  day03.kt  day04.kt  day05.kt  day06.kt  day07.kt  day08.kt  day09.kt  day10.kt  day11.kt  day12.kt  main.kt
(+93 files in other folders)
